--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "cSpell.words": [
     "Anonime",
     "interesset",
-    "tailwindcss"
+    "NEXTJS",
+    "REACTJS",
+    "tailwindcss",
+    "whatido"
   ]
 }
